# DataStructure6-1

./: CMakeLists.txt  README.md
references/: ref.md
src/: Assistance.h  ChildSiblingTree.h  ChildSiblingTreeNode.h  Genealogy.h  InformationNode.h  LinkQueue.h  LinkQueueNode.h  Node.h  SNode.h  genealogy.cpp  genealogy.h  main.cpp  zupu.txt
src/facility/: information.h  node.cpp  node.h  syntactic-sugar.h  triple-tree-node.cpp  triple-tree-node.h  triple-tree.h  tripple-tree.cpp
