cmake_minimum_required(VERSION 3.24)
project(Chapter6_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Chapter6_1 main.cpp facility/triple-tree-node.h facility/triple-tree-node.cpp facility/syntactic-sugar.h genealogy.h facility/triple-tree-node.cpp facility/triple-tree-node.cpp facility/information.h genealogy.cpp facility/triple-tree.h facility/tripple-tree.cpp)
